# twitch-scheduler

./: .gitignore  README.md  config.yaml  pyproject.toml
src/: main.py
